# lattice-forge

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  environment.yml  setup.py
LatticeForge/: __init__.py  closest_index.cpp  closest_index.py  closest_index_cpp.cpp  design_diagnostics.py  lattice_design_pipeline.py  lattice_plot_helpers.py  lattice_utils.py  refinement_candidates.py
docs/: design-diagnostics.md  haskell-reference-core.md  implementation-direction.md  index.html  refinement-candidates.md  voronoi_lattice_visualization.ipynb
notebooks/: voronoi_lattice_visualization.py
tests/: test_closest_index.py  test_design_diagnostics.py  test_lattice_design_pipeline.py  test_refinement_candidates.py  test_sampling.py
